added dependencies, gitignore and font change in css

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+/* work sans */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap');
+
+
 * {
   padding: 0;
   margin: 0;
@@ -11,21 +16,23 @@ html {
 body {
   background: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
-  padding: 0 16px;
+  padding: 0rem;
+  font-family: 'Work Sans', sans-serif;
 }
 
 header {
   background-color: #f5ba13;
-  margin: auto -16px;
-  padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  margin: auto 0px;
+  padding: 15px 32px;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.3);
 }
 
 header h1 {
   color: #fff;
   font-family: "McLaren", cursive;
   /* font-family: "Open Sans", sans-serif; */
-  font-weight: 200;
+  font-weight: 500;
+  font-size: 1.9em;
 }
 
 footer {
